add: theme light and dark and removed colors palette

--- a/technicalDocumentationPage/css/_buttons.sass
+++ b/technicalDocumentationPage/css/_buttons.sass
@@ -4,7 +4,7 @@ a.button
     flex-flow: row nowrap
     width: auto
     background: transparent
-    color: $font-color-a !important
+    color: black !important
 
     font-weight: bold
     border-radius: calculateRem(4)
