--- a/technicalDocumentationPage/css/_nav.sass
+++ b/technicalDocumentationPage/css/_nav.sass
@@ -1,6 +1,19 @@
+nav
+    // position: relative
+    // width: 100%
+    padding: 1rem
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    align-items: stretch
+    height: 100vh
+    .custom_checkbox
+        align-self: flex-start
+
 li
     display: flex
     a
+        border-radius: 0.25em
         padding: 1em
         width: 100%
         &:hover,&:focus
