--- a/technicalDocumentationPage/css/index.css
+++ b/technicalDocumentationPage/css/index.css
@@ -32,604 +32,94 @@ h6 {
   font-size: 1rem;
 }
 
+.color-red {
+  color: #F20519;
+}
+
+.red {
+  background: #F20519;
+}
+
 .color-primary {
-  color: black !important;
+  color: #F2F2F2;
 }
 
 .primary {
-  background: #f4def8 !important;
+  background: #F2F2F2;
+}
+
+.color-blue {
+  color: #27238C;
+}
+
+.blue {
+  background: #27238C;
+}
+
+.color-yellow {
+  color: #F2BC1B;
+}
+
+.yellow {
+  background: #F2BC1B;
+}
+
+.color-inverted {
+  color: #0D090A;
+}
+
+.inverted {
+  background: #0D090A;
+}
+
+.dark.color-red,
+.dark .color-red {
+  color: black;
+}
+
+.dark.red,
+.dark .red {
+  background: black;
 }
 
 .dark.color-primary,
 .dark .color-primary {
-  color: #f4def8 !important;
+  color: #0D090A;
 }
 
 .dark.primary,
 .dark .primary {
-  background: black !important;
+  background: #0D090A;
 }
 
-.primary-dark1 {
-  background: #89229b;
+.dark.color-blue,
+.dark .color-blue {
+  color: black;
 }
 
-.primary-dark2 {
-  background: #771e86;
-}
-
-.primary-dark3 {
-  background: #641971;
-}
-
-.primary-dark4 {
-  background: #52145d;
-}
-
-.primary-light1 {
-  background: #af2cc5;
-}
-
-.primary-light2 {
-  background: #bc37d3;
-}
-
-.primary-light3 {
-  background: #c34cd7;
-}
-
-.primary-light4 {
-  background: #ca61dc;
-}
-
-.color-secondary {
-  color: #070103 !important;
-}
-
-.secondary {
-  background: white !important;
-}
-
-.dark.color-secondary,
-.dark .color-secondary {
-  color: white !important;
-}
-
-.dark.secondary,
-.dark .secondary {
-  background: #070103 !important;
-}
-
-.secondary-dark1 {
-  background: #d81558;
-}
-
-.secondary-dark2 {
-  background: #c1134e;
-}
-
-.secondary-dark3 {
-  background: #aa1145;
-}
-
-.secondary-dark4 {
-  background: #930e3b;
-}
-
-.secondary-light1 {
-  background: #eb3573;
-}
-
-.secondary-light2 {
-  background: #ee4c83;
-}
-
-.secondary-light3 {
-  background: #f06493;
-}
-
-.secondary-light4 {
-  background: #f27ba3;
-}
-
-.color-accent {
-  color: black !important;
-}
-
-.accent {
-  background: #f7fcff !important;
-}
-
-.dark.color-accent,
-.dark .color-accent {
-  color: #f7fcff !important;
-}
-
-.dark.accent,
-.dark .accent {
-  background: black !important;
-}
-
-.accent-dark1 {
-  background: #0398db;
-}
-
-.accent-dark2 {
-  background: #0286c2;
-}
-
-.accent-dark3 {
-  background: #0275a8;
-}
-
-.accent-dark4 {
-  background: #02638f;
-}
-
-.accent-light1 {
-  background: #14b4fc;
-}
-
-.accent-light2 {
-  background: #2ebcfc;
-}
-
-.accent-light3 {
-  background: #47c4fd;
-}
-
-.accent-light4 {
-  background: #60ccfd;
-}
-
-.color-error {
-  color: black !important;
-}
-
-.error {
-  background: #f3f6f7 !important;
-}
-
-.dark.color-error,
-.dark .color-error {
-  color: #f3f6f7 !important;
-}
-
-.dark.error,
-.dark .error {
-  background: black !important;
-}
-
-.error-dark1 {
-  background: #566f7c;
-}
-
-.error-dark2 {
-  background: #4b626d;
-}
-
-.error-dark3 {
-  background: #41545e;
-}
-
-.error-dark4 {
-  background: #36474f;
-}
-
-.error-light1 {
-  background: #6b8a99;
-}
-
-.error-light2 {
-  background: #7b96a3;
-}
-
-.error-light3 {
-  background: #8aa2ae;
-}
-
-.error-light4 {
-  background: #99aeb8;
-}
-
-.color-warning {
-  color: black !important;
-}
-
-.warning {
-  background: #e8dcd8 !important;
-}
-
-.dark.color-warning,
-.dark .color-warning {
-  color: #e8dcd8 !important;
-}
-
-.dark.warning,
-.dark .warning {
-  background: black !important;
-}
-
-.warning-dark1 {
-  background: #694a3e;
-}
-
-.warning-dark2 {
-  background: #593f35;
-}
-
-.warning-dark3 {
-  background: #49332b;
-}
-
-.warning-dark4 {
-  background: #392822;
-}
-
-.warning-light1 {
-  background: #896052;
-}
-
-.warning-light2 {
-  background: #996b5b;
-}
-
-.warning-light3 {
-  background: #a57868;
-}
-
-.warning-light4 {
-  background: #af8778;
-}
-
-.color-info {
-  color: #111303 !important;
-}
-
-.info {
-  background: white !important;
-}
-
-.dark.color-info,
-.dark .color-info {
-  color: white !important;
-}
-
-.dark.info,
-.dark .info {
-  background: #111303 !important;
-}
-
-.info-dark1 {
-  background: #c6d626;
-}
-
-.info-dark2 {
-  background: #b2c022;
-}
-
-.info-dark3 {
-  background: #9daa1e;
-}
-
-.info-dark4 {
-  background: #89951a;
-}
-
-.info-light1 {
-  background: #d2e04f;
-}
-
-.info-light2 {
-  background: #d8e464;
-}
-
-.info-light3 {
-  background: #dde77a;
-}
-
-.info-light4 {
-  background: #e3eb90;
-}
-
-.color-success {
-  color: #3b3500 !important;
-}
-
-.success {
-  background: white !important;
-}
-
-.dark.color-success,
-.dark .color-success {
-  color: white !important;
-}
-
-.dark.success,
-.dark .success {
-  background: #3b3500 !important;
-}
-
-.success-dark1 {
-  background: #ffe822;
-}
-
-.success-dark2 {
-  background: #ffe608;
-}
-
-.success-dark3 {
-  background: #eed500;
-}
-
-.success-dark4 {
-  background: #d4be00;
-}
-
-.success-light1 {
-  background: #ffee55;
-}
-
-.success-light2 {
-  background: #fff06e;
-}
-
-.success-light3 {
-  background: #fff388;
-}
-
-.success-light4 {
-  background: #fff5a1;
-}
-
-.color-main-red {
-  color: black !important;
-}
-
-.main-red {
-  background: #fff7f8 !important;
-}
-
-.dark.color-main-red,
-.dark .color-main-red {
-  color: #fff7f8 !important;
-}
-
-.dark.main-red,
-.dark .main-red {
-  background: black !important;
-}
-
-.main-red-dark1 {
-  background: #d90416;
-}
-
-.main-red-dark2 {
-  background: #c00414;
-}
-
-.main-red-dark3 {
-  background: #a70311;
-}
-
-.main-red-dark4 {
-  background: #8e030f;
-}
-
-.main-red-light1 {
-  background: #fa162a;
-}
-
-.main-red-light2 {
-  background: #fb2f40;
-}
-
-.main-red-light3 {
-  background: #fb4857;
-}
-
-.main-red-light4 {
-  background: #fc616e;
-}
-
-.color-main-black {
-  color: black !important;
-}
-
-.main-black {
-  background: #a07580 !important;
-}
-
-.dark.color-main-black,
-.dark .color-main-black {
-  color: #a07580 !important;
-}
-
-.dark.main-black,
-.dark .main-black {
-  background: black !important;
-}
-
-.main-black-dark1 {
+.dark.blue,
+.dark .blue {
   background: black;
 }
 
-.main-black-dark2 {
-  background: black;
+.dark.color-yellow,
+.dark .color-yellow {
+  color: #0d0a01;
 }
 
-.main-black-dark3 {
-  background: black;
+.dark.yellow,
+.dark .yellow {
+  background: #0d0a01;
 }
 
-.main-black-dark4 {
-  background: black;
+.dark.color-inverted,
+.dark .color-inverted {
+  color: #F2F2F2;
 }
 
-.main-black-light1 {
-  background: #1c1316;
-}
-
-.main-black-light2 {
-  background: #2b1e21;
-}
-
-.main-black-light3 {
-  background: #3a282d;
-}
-
-.main-black-light4 {
-  background: #493338;
-}
-
-.color-main-blue {
-  color: black !important;
-}
-
-.main-blue {
-  background: #c1bfef !important;
-}
-
-.dark.color-main-blue,
-.dark .color-main-blue {
-  color: #c1bfef !important;
-}
-
-.dark.main-blue,
-.dark .main-blue {
-  background: black !important;
-}
-
-.main-blue-dark1 {
-  background: #211e78;
-}
-
-.main-blue-dark2 {
-  background: #1c1963;
-}
-
-.main-blue-dark3 {
-  background: #16144f;
-}
-
-.main-blue-dark4 {
-  background: #100f3a;
-}
-
-.main-blue-light1 {
-  background: #2d28a0;
-}
-
-.main-blue-light2 {
-  background: #322db5;
-}
-
-.main-blue-light3 {
-  background: #3832c9;
-}
-
-.main-blue-light4 {
-  background: #4a45d0;
-}
-
-.color-main-yellow {
-  color: #0d0a01 !important;
-}
-
-.main-yellow {
-  background: white !important;
-}
-
-.dark.color-main-yellow,
-.dark .color-main-yellow {
-  color: white !important;
-}
-
-.dark.main-yellow,
-.dark .main-yellow {
-  background: #0d0a01 !important;
-}
-
-.main-yellow-dark1 {
-  background: #e6b00d;
-}
-
-.main-yellow-dark2 {
-  background: #ce9d0c;
-}
-
-.main-yellow-dark3 {
-  background: #b68b0a;
-}
-
-.main-yellow-dark4 {
-  background: #9e7909;
-}
-
-.main-yellow-light1 {
-  background: #f3c333;
-}
-
-.main-yellow-light2 {
-  background: #f5ca4b;
-}
-
-.main-yellow-light3 {
-  background: #f6d163;
-}
-
-.main-yellow-light4 {
-  background: #f8d87b;
-}
-
-.color-main-white {
-  color: #737373 !important;
-}
-
-.main-white {
-  background: white !important;
-}
-
-.dark.color-main-white,
-.dark .color-main-white {
-  color: white !important;
-}
-
-.dark.main-white,
-.dark .main-white {
-  background: #737373 !important;
-}
-
-.main-white-dark1 {
-  background: #e5e5e5;
-}
-
-.main-white-dark2 {
-  background: #d9d9d9;
-}
-
-.main-white-dark3 {
-  background: #cccccc;
-}
-
-.main-white-dark4 {
-  background: #bfbfbf;
-}
-
-.main-white-light1 {
-  background: white;
-}
-
-.main-white-light2 {
-  background: white;
-}
-
-.main-white-light3 {
-  background: white;
-}
-
-.main-white-light4 {
-  background: white;
+.dark.inverted,
+.dark .inverted {
+  background: #F2F2F2;
 }
 
 * {
@@ -642,8 +132,6 @@ html {
 }
 
 body {
-  background: white;
-  color: #333;
   font-family: 'Lato', sans-serif;
   font-weight: normal;
 }
@@ -1742,7 +1230,7 @@ a.button {
           flex-flow: row nowrap;
   width: auto;
   background: transparent;
-  color: white !important;
+  color: black !important;
   font-weight: bold;
   border-radius: 0.25rem;
   position: absolute;
@@ -1788,6 +1276,29 @@ a.button .icon {
   margin-left: 1rem;
 }
 
+nav {
+  padding: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  height: 100vh;
+}
+
+nav .custom_checkbox {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+
 li {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1795,6 +1306,7 @@ li {
 }
 
 li a {
+  border-radius: 0.25em;
   padding: 1em;
   width: 100%;
 }
@@ -1806,6 +1318,26 @@ li a:hover, li a:focus {
 pre {
   padding: 1rem;
   overflow-x: auto;
+}
+
+.custom_checkbox {
+  width: auto;
+  height: auto;
+  position: relative;
+  z-index: 0;
+  padding: 1em;
+}
+
+.custom_checkbox:after {
+  content: '';
+  background: rgba(255, 255, 255, 0.4);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  border-radius: 0.25em;
 }
 
 .main-section header {
