--- a/technicalDocumentationPage/css/index.sass
+++ b/technicalDocumentationPage/css/index.sass
@@ -4,7 +4,7 @@
 
 @import 'variables'
 @import 'font_sizes'
-@import 'colors'
+@import 'theme'
 
 @import 'main_styles'
 
@@ -16,6 +16,7 @@
 @import 'buttons'
 @import 'nav'
 @import 'pre'
+@import 'checkbox'
 
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700')
 
