--- a/technicalDocumentationPage/css/_checkbox.sass
+++ b/technicalDocumentationPage/css/_checkbox.sass
@@ -6,7 +6,7 @@
     padding: 1em
     &:after
         content: ''
-        background: rgba(255, 255, 255, 0.4)
+        background: inherit
         width: 100%
         height: 100%
         position: absolute
