--- a/technicalDocumentationPage/css/_layout.sass
+++ b/technicalDocumentationPage/css/_layout.sass
@@ -26,35 +26,7 @@ body
         transform: translateX(-100%)
         transition: transform .3s ease
 
-    #nav_opener
-        width: 100%
-        height: 0
-        position: fixed
-        top: 0
-        right: 0
-        z-index: 1
-        cursor: pointer
-        transition: transform .3s ease
-        &:hover:before
-            // box-shadow: 0 0 20px currentColor
-        &:before
-            content: '►'
-            padding: 0.5em
-            font-size: map-get($goldens-map, golden16)
-            right: 1em
-            top: 1em
-            margin: 0
-            color: inherit
-            border-radius: 50%
-            position: absolute
-            background: inherit
-            transition: transform .3s ease
 
-    #nav_opener:checked:before
-        content: '◄'
-
-    #nav_opener:checked ~ nav
-        transform: translateX(0)
 
 @media (min-width: (map-get($media-breakpoints-sizes, md)))
     body
@@ -74,6 +46,9 @@ body
         width: 70%
         grid-column: 2/3
         grid-row: 2/3
+
+    #nav_opener
+        display: none
 
 // @media (min-width: (map-get($media-breakpoints-sizes, md)))
 //     body
