--- a/technicalDocumentationPage/css/_nav.sass
+++ b/technicalDocumentationPage/css/_nav.sass
@@ -16,3 +16,33 @@ li
         width: 100%
         &:hover,&:focus
             background: rgba(255, 255, 255, 0.4)
+
+#nav_opener
+    width: 100%
+    height: 0
+    position: fixed
+    top: 0
+    right: 0
+    z-index: 1
+    cursor: pointer
+    transition: transform .3s ease
+    &:hover:before
+        // box-shadow: 0 0 20px currentColor
+    &:before
+        content: '►'
+        padding: 0.5em
+        font-size: map-get($goldens-map, golden16)
+        right: 1em
+        top: 1em
+        margin: 0
+        color: inherit
+        border-radius: 50%
+        position: absolute
+        background: inherit
+        transition: transform .3s ease
+
+#nav_opener:checked:before
+    content: '◄'
+
+#nav_opener:checked ~ nav
+    transform: translateX(0)
