add: breakpoints for project-gallery when viewport < md

--- a/personalPortfolio/css/index.css
+++ b/personalPortfolio/css/index.css
@@ -1326,16 +1326,24 @@ footer {
 
 .project-tile iframe {
   width: 100%;
-  overflow: hidden;
+  height: 19.2em;
 }
 
 .project-tile h3 {
   height: 1px;
   width: 1px;
+  font-size: 1px;
 }
 
 .project-tile iframe main {
   width: 100%;
   overflow: hidden !important;
+}
+
+@media (max-width: 960px) {
+  .project-gallery {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
 }
 /*# sourceMappingURL=index.css.map */
