add: projects-tiles footer to put in information

--- a/personalPortfolio/css/_placeholders.sass
+++ b/personalPortfolio/css/_placeholders.sass
@@ -10,3 +10,7 @@
 %centralize-all
     @extend %vertical-center
     @extend %horizontal-center
+
+%main_transition
+    transition: all .3s ease
+    
