--- a/personalPortfolio/css/index/_challenge.sass
+++ b/personalPortfolio/css/index/_challenge.sass
@@ -1,3 +1,20 @@
+#navbar
+    position: fixed
+    top: 0
+    left: 0
+    z-index: 10
+
+main
+    margin-top: 10em
+    overflow: hidden
+
+.main-section
+    min-height: 100vh
+    width: 100%
+
+#welcome-section
+    height: 100vh
+
 .project-gallery
     display: grid
     grid-template-columns: 1fr 1fr 1fr
@@ -36,4 +53,4 @@
 
 @media (max-width: map-get($media-breakpoints-sizes, md))
     .project-gallery
-        grid-template-columns: 1fr
+        grid-template-columns: 100%
