--- a/personalPortfolio/css/_nav.sass
+++ b/personalPortfolio/css/_nav.sass
@@ -1,20 +1,10 @@
 nav
     @extend %vertical-center
     width: 100%
-    height: auto
+    height: 10em
     justify-content: space-between
     align-items: center
-    padding: 1em
     z-index: 1
-    // &:before
-    //     content: ''
-    //     position: absolute
-    //     width: 100%
-    //     height: 100%
-    //     left: 0
-    //     top: 0
-    //     z-index: -1
-    //     background: linear-gradient(to bottom, currentColor, transparent)
 
     ul
         @extend %vertical-center
