--- a/personalPortfolio/css/index.css
+++ b/personalPortfolio/css/index.css
@@ -1249,14 +1249,13 @@ a.button .icon {
 
 nav {
   width: 100%;
-  height: auto;
+  height: 10em;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 1em;
   z-index: 1;
 }
 
@@ -1320,6 +1319,27 @@ footer {
   grid-area: footer;
 }
 
+#navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+
+main {
+  margin-top: 10em;
+  overflow: hidden;
+}
+
+.main-section {
+  min-height: 100vh;
+  width: 100%;
+}
+
+#welcome-section {
+  height: 100vh;
+}
+
 .project-gallery {
   display: -ms-grid;
   display: grid;
@@ -1367,8 +1387,8 @@ footer {
 
 @media (max-width: 960px) {
   .project-gallery {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
   }
 }
 /*# sourceMappingURL=index.css.map */
