--- a/personalPortfolio/css/index/_challenge.sass
+++ b/personalPortfolio/css/index/_challenge.sass
@@ -23,11 +23,13 @@ main
 
 .project-tile
     width: 100%
-    position: relative
-
-.project-tile iframe
-    width: 100%
     height: 20em
+    position: relative
+    overflow: hidden
+    iframe
+        height: 100%
+    iframe, img
+        width: 100%
 
 .project-tile-footer
     @extend %main_transition
