--- a/personalPortfolio/css/index.css
+++ b/personalPortfolio/css/index.css
@@ -152,7 +152,7 @@ a {
   text-decoration: none;
 }
 
-a.button, nav, nav ul {
+a.button, nav #nav_button, nav, nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -161,7 +161,7 @@ a.button, nav, nav ul {
           align-items: center;
 }
 
-a.button {
+a.button, nav #nav_button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -171,7 +171,7 @@ a.button {
   text-align: center;
 }
 
-.project-tile-footer {
+nav, .project-tile-footer {
   -webkit-transition: all .3s ease;
   transition: all .3s ease;
 }
@@ -1247,6 +1247,12 @@ a.button .icon {
   margin-left: 1rem;
 }
 
+nav:hover,
+nav:focus-within {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
 nav {
   width: 100%;
   height: 10em;
@@ -1257,6 +1263,8 @@ nav {
       -ms-flex-align: center;
           align-items: center;
   z-index: 1;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
 }
 
 nav ul {
@@ -1268,6 +1276,17 @@ nav ul {
 
 nav ul li {
   margin: 0 1em;
+}
+
+nav #nav_button {
+  position: fixed;
+  right: 1em;
+  top: 11em;
+  width: 4em;
+  height: 4em;
+  background: white;
+  color: black;
+  display: none;
 }
 
 pre {
