fix: change the nav_button to be located exactly under of the navbar

--- a/personalPortfolio/css/_nav.sass
+++ b/personalPortfolio/css/_nav.sass
@@ -22,10 +22,8 @@ nav
         @extend %centralize-all
         position: fixed
         right: 1em
-        top: 11em
+        top: 10em
         width: 4em
         height: 4em
-        background: white
-        color: black
-        display: none
+        box-sizing: normal
         
