--- a/personalPortfolio/css/_placeholders.sass
+++ b/personalPortfolio/css/_placeholders.sass
@@ -12,5 +12,8 @@
     @extend %horizontal-center
 
 %main_transition
-    transition: all .3s ease
-    
+    transition: all .1s ease
+
+%cursor-pointer
+    cursor: pointer
+    user-select: none
