fix: refactoring dark_mode to dark-mode

--- a/personalPortfolio/css/_main_styles.sass
+++ b/personalPortfolio/css/_main_styles.sass
@@ -21,3 +21,15 @@ img
 a
     text-decoration: none
     // color: $font-color-a
+
+hr 
+	display: block 
+	unicode-bidi: isolate 
+	margin-block-start: 0.5em 
+	margin-block-end: 0.5em 
+	margin-inline-start: auto 
+	margin-inline-end: auto 
+	overflow: hidden 
+	border-style: inset 
+	border-width: 0.25em 
+	border-style: solid 
