--- a/personalPortfolio/css/_buttons.sass
+++ b/personalPortfolio/css/_buttons.sass
@@ -3,38 +3,43 @@ a.button
     flex: 0 1 0
     flex-flow: row nowrap
     width: auto
-    background: transparent
-    color: black !important
-
+    // padding: 0.2em 0.6em
+    width: 2em
+    height: 2em
     font-weight: bold
-    border-radius: calculateRem(4)
-    position: absolute
+    border-radius: 50%//calculateRem(4)
+    position: relative
     overflow: hidden
     z-index: 1
     // box-shadow: 0 0 20px -7px #000
     &:active
         box-shadow: 0 0 0 0 #000
     &:before
+        @extend %centralize-all
         content: ''
         width: 0
         height: 100%
-        // background: linear-gradient(to left, rgba(0,0,0,0), rgba(255,255,0,0.8))
+        background: linear-gradient(to left, rgba(0,0,0,0), currentColor)
+        opacity: 0.4
         position: absolute
         top: 0
         left: 0
         z-index: -1
-        transition: all .3s ease
-        animation: rainbow 1s 2s 3 alternate backwards
     &:hover:before
         width: 100%
     &:after
         content: ''
         width: 100%
         height: 100%
-        background: blue
-        position: absolute
         top: 0
         left: 0
         z-index: -2
     .icon
-        margin-left: 1rem
+        margin-right: 1em
+    span
+        width: 0
+        display: none
+        // color: transparent
+    &:hover span
+        // width: 200px
+        // color: black
