--- a/personalPortfolio/css/index.css
+++ b/personalPortfolio/css/index.css
@@ -1321,7 +1321,15 @@ nav #nav-menu > *:not(#nav-menu-opener) {
 }
 
 nav #nav-menu > *:not(#nav-menu-opener) {
-  height: 3em;
+  height: 2em;
+}
+
+nav #nav-menu #nav-internal, nav #nav-menu #nav-social, nav #nav-menu #nav-dark-mode {
+  padding: 0 1em;
+}
+
+nav #nav-menu #nav-internal > *, nav #nav-menu #nav-social > *, nav #nav-menu #nav-dark-mode > * {
+  margin-left: 1em;
 }
 
 @media (max-width: 960px) {
@@ -1388,23 +1396,23 @@ footer {
   grid-area: footer;
 }
 
-.icon {
-  font-family: 'Material Icons';
+@font-face {
+  font-family: "Material Design Icons";
+  src: url("https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/fonts/materialdesignicons-webfont.eot?v=3.6.95");
+  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=3.6.95") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=3.6.95") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=3.6.95") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=3.6.95") format("truetype"), url("../fonts/materialdesignicons-webfont.svg?v=3.6.95#materialdesigniconsregular") format("svg");
   font-weight: normal;
   font-style: normal;
-  font-size: inherit !important;
+}
+
+.mdi:before,
+.mdi-set {
   display: inline-block;
-  line-height: 1;
-  text-transform: none;
-  letter-spacing: normal;
-  word-wrap: normal;
-  white-space: nowrap;
-  direction: ltr;
+  font: normal normal normal 24px/1 "Material Design Icons";
+  font-size: inherit;
+  text-rendering: auto;
+  line-height: inherit;
   -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-font-feature-settings: 'liga';
-          font-feature-settings: 'liga';
 }
 
 #navbar {
