--- a/personalPortfolio/css/index.sass
+++ b/personalPortfolio/css/index.sass
@@ -20,6 +20,6 @@
 @import 'layout'
 
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700')
-@import 'material_icons'
+@import 'material_design_icons'
 
 @import 'index/challenge'
