--- a/personalPortfolio/css/index.css
+++ b/personalPortfolio/css/index.css
@@ -170,7 +170,7 @@ hr {
   border-style: solid;
 }
 
-a.button, a.button:before, #nav-menu-opener, nav {
+a.button, a.button:before, #nav-menu-opener, .icon, nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -179,7 +179,7 @@ a.button, a.button:before, #nav-menu-opener, nav {
           align-items: center;
 }
 
-a.button, a.button:before, #nav-menu-opener {
+a.button, a.button:before, #nav-menu-opener, .icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1300,14 +1300,14 @@ nav {
   z-index: 1;
 }
 
-nav #nav-menu {
+#nav-menu {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
 }
 
-nav #nav-menu,
-nav #nav-menu > *:not(#nav-menu-opener) {
+#nav-menu,
+#nav-menu > *:not(#nav-menu-opener) {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1320,16 +1320,24 @@ nav #nav-menu > *:not(#nav-menu-opener) {
           align-items: center;
 }
 
-nav #nav-menu > *:not(#nav-menu-opener) {
+#nav-menu > *:not(#nav-menu-opener) {
   height: 2em;
 }
 
-nav #nav-menu #nav-internal, nav #nav-menu #nav-social, nav #nav-menu #nav-dark-mode {
+#nav-internal, #nav-social, #nav-dark-mode {
   padding: 0 1em;
 }
 
-nav #nav-menu #nav-internal > *, nav #nav-menu #nav-social > *, nav #nav-menu #nav-dark-mode > * {
+#nav-internal > *, #nav-social > *, #nav-dark-mode > * {
   margin-left: 1em;
+}
+
+#nav-internal {
+  font-size: 1.2em;
+}
+
+#nav-social span {
+  display: none;
 }
 
 @media (max-width: 960px) {
@@ -1345,6 +1353,12 @@ nav #nav-menu #nav-internal > *, nav #nav-menu #nav-social > *, nav #nav-menu #n
         -ms-flex-pack: center !important;
             justify-content: center !important;
   }
+}
+
+.icon {
+  padding: 1em;
+  width: 3em;
+  height: 3em;
 }
 
 pre {
@@ -1399,7 +1413,7 @@ footer {
 @font-face {
   font-family: "Material Design Icons";
   src: url("https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/fonts/materialdesignicons-webfont.eot?v=3.6.95");
-  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=3.6.95") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=3.6.95") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=3.6.95") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=3.6.95") format("truetype"), url("../fonts/materialdesignicons-webfont.svg?v=3.6.95#materialdesigniconsregular") format("svg");
+  src: url("https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/fonts/materialdesignicons-webfont.eot?#iefix&v=3.6.95") format("embedded-opentype"), url("https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/fonts/materialdesignicons-webfont.woff2?v=3.6.95") format("woff2"), url("https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/fonts/materialdesignicons-webfont.woff?v=3.6.95") format("woff"), url("https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/fonts/materialdesignicons-webfont.ttf?v=3.6.95") format("truetype"), url("https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/fonts/materialdesignicons-webfont.svg?v=3.6.95#materialdesigniconsregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
